# chessengine

./: .gitignore  CMakeLists.txt  calibrate.sh  random_nn.txt  send_work.py  send_work.sh  stockfish  stockfish10  train.py  uci.txt  worker.py  worker.sh
dependencies/: aws.cmake  boost.cmake  eigen.cmake  gtest.cmake  rapidjson.cmake
src/: CMakeLists.txt  main.cpp
src/arbiter/: CMakeLists.txt  arbiter.cpp  arbiter.h  arbiter_main.cpp  condition_waiter.cpp  condition_waiter.h  player.cpp  player.h  process.cpp  process.h  settings.h  time_format.h
src/chess/: Board.cpp  Board.h  CMakeLists.txt  Move.h  Square.cpp  Square.h  bitboard.cpp  bitboard.h  board.cpp  board.h  color.cpp  color.h  core.cpp  core.h  fen.cpp  fen.h  game.cpp  game.h  magic_bitboard.cpp  magic_bitboard.h  move.h  move_gen.cpp  move_gen.h  piece.h  square.cpp  square.h  zobrist.cpp  zobrist.h
src/chess/include/chess/: fen.h  game.h  magic_bitboard.h  move.h  move_gen.h  zobrist.h
src/engine/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  CMakeLists.txt  Color.cpp  Color.h  Move.h  Piece.h  Square.cpp  Square.h  SquarePosition.cpp  SquarePosition.h  bitboard.cpp  bitboard.h  engine.cpp  engine.h  evaluator.cpp  evaluator.h  main.cpp  mcts.cpp  mcts.h  nn_eval.cpp  nn_eval.h  pvs.cpp  pvs.h  static_evaluator.cpp  static_evaluator.h  transposition_table.cpp  transposition_table.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/engine/include/chess/engine/: engine.h  nn_eval.h
src/engine_diluter/: CMakeLists.txt  main.cpp
src/engine_optimizer/: CMakeLists.txt  algorithm.cpp  algorithm.h  generate_supervised_training_set.cpp  main.cpp  message_queue.cpp  message_queue.h  opt_util.h  particle_swarm_optimizer.cpp  particle_swarm_optimizer.h  supervised_trainer.cpp  supervised_trainer.h  trainmlp.cpp
src/engine_optimizer/amplification_distillation/: CMakeLists.txt  ampdist.cpp  gen_games.cpp  parse_log.cpp
src/neuralnet/: CMakeLists.txt  mlp.cpp  mlp.h  neat.cpp  neat.h  neat_network.cpp  neat_network.h  neuralnet.cpp  neuralnet.h
src/neuralnet/include/chess/neuralnet/: mlp.h  neat_network.h
src/random_engine/: CMakeLists.txt  main.cpp
src/uci/: CMakeLists.txt  engine_wrapper.cpp  uci.cpp
src/uci/include/chess/uci/: engine_wrapper.h  uci.h
src/worker/: calibrate.py  send_work.py  send_work.sh  set_option_static.txt  startup.sh  static.txt  train.py  train_cycle.py  worker.py
test/: CMakeLists.txt  test_common.h
test/arbiter/: CMakeLists.txt  arbiter_test.cpp  main.cpp  process_test.cpp
test/assertions/: Assertion.cpp  Assertion.h  BoardAssertion.cpp  BoardAssertion.h
test/chess/: CMakeLists.txt  bitboard_test.cpp  board_bug_detect.cpp  board_perft_test.cpp  board_test.cpp  game_test.cpp  main.cpp  move_gen_test.cpp  square_test.cpp
test/engine/: BoardTest.cpp  CMakeLists.txt  SquarePositionTest.cpp  engine_test.cpp  main.cpp  nn_eval_test.cpp
test/neuralnet/: CMakeLists.txt  neat_network_test.cpp  neat_test.cpp  neuralnet_test.cpp
test/optimizer/: CMakeLists.txt  algorithm_tests.cpp  particle_swarm_optimization_test.cpp
test/uci/: CMakeLists.txt  main.cpp
