file(GLOB SRCS *.cpp)
file(GLOB MAINCPP arbiter_main.cpp)
list(REMOVE_ITEM SRCS ${MAINCPP})
add_library(arbiter STATIC ${SRCS})
target_include_directories(arbiter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(arbiter chess)
target_link_libraries(arbiter chess_uci)

add_executable(chessarbiter ${MAINCPP})
target_link_libraries(chessarbiter arbiter)
target_link_libraries(chessarbiter boost_program_options)

if ("${CMAKE_BUILD_TYPE}" MATCHES "Release")
    add_custom_command(TARGET chessarbiter POST_BUILD COMMAND aws s3 cp ${CMAKE_CURRENT_BINARY_DIR}/chessarbiter s3://leonkacowicz/chess/worker/ || echo "Skipped")
endif()