file(GLOB SRCS *.cpp *.h)
file(GLOB MAINCPP main.cpp)
list(REMOVE_ITEM SRCS ${MAINCPP})
add_library(engine STATIC ${SRCS})
target_include_directories(engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(engine chess)
target_link_libraries(engine Eigen3::Eigen)
target_link_libraries(engine Threads::Threads)
target_link_libraries(engine lib_neuralnet)

add_executable(chessengine main.cpp)
target_link_libraries(chessengine engine)