file(GLOB SRCS *.cpp *.h)
file(GLOB MAINCPP main.cpp)
list(REMOVE_ITEM SRCS ${MAINCPP})
add_library(engine STATIC ${SRCS})
target_include_directories(engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(engine chess)
target_link_libraries(engine Eigen3::Eigen)
target_link_libraries(engine Threads::Threads)
target_link_libraries(engine chess_neuralnet)
target_link_libraries(engine chess_uci)

add_executable(chessengine main.cpp)
target_link_libraries(chessengine engine)

if ("${CMAKE_BUILD_TYPE}" MATCHES "Release")
    add_custom_command(TARGET chessengine POST_BUILD COMMAND aws s3 cp ${CMAKE_CURRENT_BINARY_DIR}/chessengine s3://leonkacowicz/chess/ || echo "Skipped")
endif()