file(GLOB SRCS *.cpp *.h)
list(REMOVE_ITEM SRCS main.cpp)
add_library(engine_optimizer STATIC ${SRCS})
target_include_directories(engine_optimizer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(engine_optimizer chess)
target_link_libraries(engine_optimizer lib_neuralnet)
target_link_libraries(engine_optimizer boost_filesystem)

add_executable(chessengine_optimizer main.cpp)
target_link_libraries(chessengine_optimizer engine_optimizer)
